HelloUltraviolet/Fixtures/RejectedSource/FFI/HostedExportDiagnostics/Expected.uv
//! Expected diagnostic metadata for the HostedExportDiagnostics rejected-source specimen.

expectedDiagnostic("E-TYP-2634", "diagnostics.23.HostedExportDiagnostics")
